--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1 id="title">Gerador de Senha</h1>
 
         <div id="senha-gerada">
-            <span id="password">dasdas</span>
+            <span id="password"></span>
             <button id="copia">
                 <i class="fa-solid fa-copy"></i>
             </button>
@@ -25,12 +25,12 @@
                 <label for="qtd-caracteres">Quantidade de Caracteres</label>
             </div>
             <div class="item">
-                <input type="checkbox" id="chk-maiusculas" name="chk-maisculas">
-                <label for="chk-maisculas">Adicionar Maiúsculas?</label>
+                <input type="checkbox" id="chk-maiusculas" name="chk-maiusculas">
+                <label for="chk-maiusculas">Adicionar Maiúsculas?</label>
             </div>
             <div class="item">
                 <input type="checkbox" id="chk-minusculas" name="chk-minusculas">
-                <label for="chk-minusculas">Adicionar Minuscúlas?</label>
+                <label for="chk-minusculas">Adicionar Minúsculas?</label>
             </div>
             <div class="item">
                 <input type="checkbox" id="chk-numeros" name="chk-numeros">
@@ -44,6 +44,6 @@
         </div>
     </section>
 
-    <script src="./index.js"></script>
+    <script type="module" src="./index.js"></script>
 </body>
 </html>
